Bug 1563163 Part 1: Make Flex::Flex gracefully handle frames without FlexContainerInfo structures. r=mats

Differential Revision: https://phabricator.services.mozilla.com/D44283